--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^0.20.0+1
   cloud_firestore: ^0.16.0
   firebase_storage: ^7.0.0
+  provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
